[gd_scene load_steps=11 format=3 uid="uid://ctrwhm5g7oyti"]

[ext_resource type="Script" uid="uid://b7e1n4g5tgjak" path="res://levels/level_01.gd" id="1_q7ibo"]
[ext_resource type="Texture2D" uid="uid://6qpmobrwt1vq" path="res://assets/tiles.png" id="1_ty3hu"]
[ext_resource type="PackedScene" uid="uid://chms70770ee4w" path="res://player/player.tscn" id="2_mckh2"]
[ext_resource type="PackedScene" uid="uid://bv0ifs43crylp" path="res://enemies/enemy.tscn" id="3_81a5f"]
[ext_resource type="PackedScene" uid="uid://kdbyhc1ic32a" path="res://ui/hud.tscn" id="4_gg43x"]
[ext_resource type="PackedScene" uid="uid://ddm8kdulf680b" path="res://items/sock.tscn" id="5_mllcm"]
[ext_resource type="AudioStream" uid="uid://dbtitvfonqwn3" path="res://assets/One Man Symphony - Downtempo & Lofi & Progressive Music Pack Vol - 2 (Free) - 01 Reflection Of Familiar Faces.mp3" id="7_cg8v6"]
[ext_resource type="AudioStream" uid="uid://bwbakslae8owc" path="res://assets/pickup2.ogg" id="8_j0sdw"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mckh2"]
texture = ExtResource("1_ty3hu")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_81a5f"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_mckh2")

[node name="level_01" type="Node2D"]
script = ExtResource("1_q7ibo")

[node name="Enemy" parent="." instance=ExtResource("3_81a5f")]
position = Vector2(-189, -20)

[node name="Player" parent="." instance=ExtResource("2_mckh2")]
position = Vector2(-2, -14)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_81a5f")
format = 2
layer_0/tile_data = PackedInt32Array(0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 65536, 0, 6, 65536, 0, 7, 65536, 0, 8, 65536, 0, 9, 65536, 0, 10, 65536, 0, 11, 65536, 0, 12, 65536, 0, 65535, 0, 0, 65534, 0, 0, 65533, 0, 0, 65532, 0, 0, 65531, 0, 0, 65530, 0, 0, 65529, 0, 0, 65528, 0, 0, 65527, 0, 0, 65526, 0, 0, 65525, 0, 0, 65524, 0, 0, 65523, 0, 0, 65522, 0, 0, 65521, 0, 0, 65520, 0, 0, 65519, 0, 0, 65518, 0, 0, 65517, 0, 0, 65516, 0, 0, 13, 65536, 0, 14, 65536, 0, 15, 65536, 0, 16, 65536, 0, 17, 65536, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 0, 27, 0, 0, 28, 0, 0, 29, 0, 0, 30, 0, 0, 31, 0, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 36, 0, 0, 37, 0, 0, 38, 0, 0, 39, 0, 0, 40, 0, 0, 41, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 46, 0, 0, 47, 0, 0, 48, 0, 0, 49, 0, 0, 50, 0, 0, 51, 0, 0, 52, 0, 0, 65515, 0, 0, 65514, 0, 0, 65513, 0, 0, 65512, 0, 0, 65511, 0, 0, 65510, 0, 0, 65509, 0, 0, 65508, 0, 0, 65507, 0, 0, 65506, 0, 0, 65505, 0, 0, 65504, 0, 0, 65503, 0, 0, 65502, 0, 0, 65501, 0, 0, -65531, 65536, 1, -65530, 65536, 0, -131066, 65536, 1, -196601, 65536, 1, -65529, 65536, 0, -131065, 65536, 0, -131064, 65536, 0, -65528, 65536, 0, -196600, 0, 0, -196599, 0, 0, -131063, 65536, 0, -65527, 65536, 0, -196598, 0, 0, -131062, 65536, 0, -65526, 65536, 0, -65525, 65536, 0, -65524, 65536, 0, -65523, 65536, 0, -65522, 65536, 0, -65521, 65536, 0, -65520, 65536, 0, -65519, 65536, 0, -131055, 65536, 0, -196591, 0, 0, -196592, 0, 0, -131056, 65536, 0, -131057, 65536, 0, -196593, 0, 0, -196594, 0, 0, -196595, 0, 0, -131059, 65536, 0, -131058, 65536, 0, -196596, 0, 0, -196597, 0, 0, -131061, 65536, 0, -131060, 65536, 0, -262134, 0, 1, -262133, 0, 1, -262132, 0, 1, -262131, 0, 1, -262130, 0, 1, -327669, 0, 1, -327668, 0, 1, -327667, 0, 1, -65509, 65536, 1, -131044, 65536, 1, -196579, 65536, 1, -196576, 0, 0, -196575, 0, 0, -196574, 0, 0, -196571, 0, 0, -196570, 0, 0, -196569, 0, 0, -196568, 0, 0, -196567, 0, 0, -196566, 0, 0, -65492, 0, 1, -131027, 0, 1, -196562, 0, 1, -262097, 0, 1, -196560, 0, 1, -131023, 0, 1, -65486, 0, 1, -65487, 0, 1, -65488, 0, 1, -65489, 0, 1, -65490, 0, 1, -65491, 0, 1, -131026, 0, 1, -131025, 0, 1, -196561, 0, 1, -131024, 0, 1, -65508, 65536, 0, -65507, 65536, 0, -131043, 65536, 0, -131040, 65536, 0, -65504, 65536, 0, -65503, 65536, 0, -65502, 65536, 0, -131038, 65536, 0, -131039, 65536, 0, -131035, 65536, 0, -65499, 65536, 0, -65498, 65536, 0, -65497, 65536, 0, -65496, 65536, 0, -65495, 65536, 0, -65494, 65536, 0, -131030, 65536, 0, -131031, 65536, 0, -131032, 65536, 0, -131033, 65536, 0, -131034, 65536, 0, -35, 0, 1, -65571, 0, 1, -131107, 0, 1, -196643, 0, 1, -262179, 0, 1, -393251, 0, 1, -458787, 0, 1, -327715, 0, 1, -65483, 65536, 1, -131018, 65536, 1, -196553, 65536, 1, -262088, 65536, 1, -327623, 65536, 1, -393158, 65536, 1, -458693, 65536, 1, -524228, 65536, 1, -589763, 65536, 1, -655298, 65536, 1, -720833, 65536, 1, -720832, 0, 1, -720831, 0, 1, -720830, 0, 1, -720829, 0, 1, -720828, 0, 1, -720827, 0, 1, -720826, 0, 1, -720825, 0, 1, -720824, 0, 1, -720823, 0, 1, -720822, 0, 1, -720821, 0, 1, -720820, 0, 1, -720819, 0, 1, -720818, 0, 1, -720817, 0, 1, -720816, 0, 1, -720815, 0, 1, -720814, 0, 1, -720813, 0, 1, -720812, 0, 1, -720811, 0, 1, -720810, 0, 1, -786366, 65536, 1, -786346, 0, 1, -851882, 0, 1, -917418, 0, 1, -720809, 0, 0, -720808, 0, 0, -720807, 0, 0, -720806, 0, 0, -720805, 0, 0, -720804, 0, 0, -720803, 0, 0, -720802, 0, 0, -720801, 0, 0, -982944, 0, 1, -982943, 0, 1, -982942, 0, 1, -982941, 0, 1, -982940, 0, 1, -982939, 0, 1, -982938, 0, 1, -982937, 0, 1, -917401, 0, 1, -851865, 0, 1, -786329, 0, 1, -720793, 0, 1, -720794, 0, 1, -720795, 0, 1, -720796, 0, 1, -720797, 0, 1, -720798, 0, 1, -720799, 0, 1, -720800, 0, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("4_gg43x")]

[node name="Sock" parent="." instance=ExtResource("5_mllcm")]
position = Vector2(253, -123)
scale = Vector2(0.5, 0.5)

[node name="Sock2" parent="." instance=ExtResource("5_mllcm")]
position = Vector2(759, -73)
scale = Vector2(0.5, 0.5)

[node name="Sock3" parent="." instance=ExtResource("5_mllcm")]
position = Vector2(535, -58)
scale = Vector2(0.5, 0.5)

[node name="Sock4" parent="." instance=ExtResource("5_mllcm")]
position = Vector2(1619, -201)

[node name="Enemy2" parent="." instance=ExtResource("3_81a5f")]
position = Vector2(1103, -194)

[node name="backgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_cg8v6")
volume_db = -23.988
autoplay = true

[node name="itemPickedUpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_j0sdw")
volume_db = -11.0

[connection signal="life_changed" from="Player" to="." method="_on_player_life_changed"]
[connection signal="body_shape_entered" from="Sock" to="." method="_on_sock_body_shape_entered"]
[connection signal="picked_up" from="Sock" to="." method="_on_sock_picked_up"]
[connection signal="picked_up" from="Sock2" to="." method="_on_sock_2_picked_up"]
[connection signal="picked_up" from="Sock3" to="." method="_on_sock_3_picked_up"]
[connection signal="picked_up" from="Sock4" to="." method="_on_sock_3_picked_up"]
